--- a/backend/package.json
+++ b/backend/package.json
@@ -2,19 +2,17 @@
   "name": "backend",
   "version": "1.0.0",
   "description": "",
-  "license": "ISC",
   "author": "Pratik",
-  "type": "commonjs",
-  "main": "index.js",
+  "license": "ISC",
+  "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node server.js"
   },
   "dependencies": {
-    "body-parser": "^2.2.1",
+    "express": "^4.19.2",
+    "mongoose": "^8.0.0",
     "cors": "^2.8.5",
-    "dotenv": "^17.2.3",
-    "express": "^5.2.1",
-    "mongoose": "^9.1.1",
-    "validator": "^13.15.26"
+    "dotenv": "^16.4.5",
+    "validator": "^13.11.0"
   }
 }
